--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-        .area-wrapper {
+        body {
             width: 100%;
             height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
         }
-
         #area {
             width: 300px;
             height: 300px;
@@ -26,6 +25,18 @@
         .box {
             width: 100px;
             height: 100px;
+            border: 1px solid rgb(204, 145, 7);
+            box-sizing: border-box;
+            font-size: 90px;
+            color: rgb(204, 145, 7);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        #button{
+            width: 300px;
+            height: 100px;
+            background-color: black;
             border: 1px solid rgb(204, 145, 7);
             box-sizing: border-box;
             font-size: 90px;
@@ -50,9 +61,12 @@
             <div class="box" id="7"></div>
             <div class="box" id="8"></div>
         </div>
+        <button id="button">Reset</button>
+        <div id="screen"></div>
+        <div id="playerwins"></div>
     </div>
-    <button id="button">Reset</button>
     <script>
+        let xx = [0];
         let checkPiece = 0;
         const winner = [
             [0, 1, 2],
@@ -90,16 +104,24 @@
                 }
             }
             for(let x = 0;x<winner.length;x++){
-                if( document.getElementById(winner[x][0]).innerHTML == "X" && document.getElementById(winner[x][1]).innerHTML == "X" && document.getElementById(winner[x][2]).innerHTML == "X" ){
-                    alert("X wins");
-                    checkPiece++;
+                if( document.getElementById(winner[x][0]).innerHTML === "X" && document.getElementById(winner[x][1]).innerHTML === "X" && document.getElementById(winner[x][2]).innerHTML === "X" ){
+                    document.getElementById("screen").innerHTML = "X wins";
+                    checkPiece = 0;
                 }
-                if( document.getElementById(winner[x][0]).innerHTML == "O" && document.getElementById(winner[x][1]).innerHTML == "O" && document.getElementById(winner[x][2]).innerHTML == "O" ){
-                    alert("O wins");
-                    checkPiece++;
+                if( document.getElementById(winner[x][0]).innerHTML === "O" && document.getElementById(winner[x][1]).innerHTML === "O" && document.getElementById(winner[x][2]).innerHTML === "O" ){
+                    document.getElementById("screen").innerHTML = "O wins";
+                    checkPiece = 0;
                 }
             }
-            
+            for(let y = 0; y < document.querySelectorAll(".box").length;y++){
+                if(document.getElementById(y).innerHTML != ""){
+                    xx[y] = 1;
+                }
+            }
+            if(xx[0] == 1 && xx[1] == 1 && xx[2] == 1 && xx[3] == 1 && xx[4] == 1 && xx[5] == 1 && xx[6] == 1 && xx[7] == 1 && xx[8] == 1 && checkPiece != 1){
+                document.getElementById("screen").innerHTML = "Nobody wins";
+                checkPiece = 1;
+            }
         }});
     </script>
 </body>
