--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             background-color: black;
             border: 1px solid rgb(204, 145, 7);
             box-sizing: border-box;
-            font-size: 25px;
+            font-size: 20px;
             color: rgb(204, 145, 7);
             display: flex;
             justify-content: center;
@@ -78,6 +78,8 @@
         <div id="playerwins" class="underGame"></div>
     </div>
     <script>
+        let Xwins = 0;
+        let Owins = 0;
         let xx = [0];
         let checkPiece = 0;
         const winner = [
@@ -120,11 +122,15 @@
                 if( document.getElementById(winner[x][0]).innerHTML === "X" && document.getElementById(winner[x][1]).innerHTML === "X" && document.getElementById(winner[x][2]).innerHTML === "X" ){
                     document.getElementById("screen").innerHTML = "X wins";
                     checkPiece = 1;
+                    Xwins++;
                 }
                 if( document.getElementById(winner[x][0]).innerHTML === "O" && document.getElementById(winner[x][1]).innerHTML === "O" && document.getElementById(winner[x][2]).innerHTML === "O" ){
                     document.getElementById("screen").innerHTML = "O wins";
                     checkPiece = 1;
+                    Owins++;
                 }
+                let text = "X wins = "+Xwins+" and O wins = "+Owins;
+                document.getElementById("playerwins").innerHTML = text;
             }
             for(let y = 0; y < document.querySelectorAll(".box").length;y++){
                 if(document.getElementById(y).innerHTML != ""){
